# confidence-estimation

./: .gitignore  README.md  annotation.py  annotation.sh  config.toml  decode.py  environment.yml  fetch_dict.py  frequency.py  histogram.py  layers.py  main.py  manager.py  model.py  param_array.json  param_array.py  preprocess.py  preprocess.sh  pyproject.toml  score.py  score_model.py  score_model_conf.py  stat_sign.py  translate.py
annotation/: annotator.sh
data/: dict.ende  dict.json
data_annotation/: annotate.py  annotate_errors.txt  annotate_output.txt  gpt_input.txt  gpt_output.txt  mistranslated.txt  news-test2008.json  wmt17.en-de  wmt17.en-de.hyp
data_de-en/: fetch_data.py
data_de-en/biom/wmt20/: medline_de2en_de.txt
data_de-en/biom/wmt21/: de2en_align_validation.tsv  de2en_mapping.txt  medline_de2en_de.txt  medline_de2en_en.txt
data_de-en/biom/wmt22/: de2en_align_validation.tsv  de2en_mapping.txt  medline_de2en_de.txt
data_de-en_large/: fetch_data.py
data_de-en_large/biom/wmt20/: de2en_align_validation.tsv  de2en_mapping.txt  medline_de2en_en.txt
data_de-en_large/biom/wmt22/: medline_de2en_en.txt
data_de-en_small/: build_dict.py  extract_biom.py  fetch_data.py
data_gpt-4o/: gpt_output.txt  mistranslated.txt
data_mgiza/: Dockerfile  alignments.txt
data_webapp/: Caddyfile  Dockerfile  compose.yaml  main.py  pyproject.toml
data_webapp/public/: index.html  manifest.json  script.js  style.css
data_webapp/public/images/: icon_pixiv.pxz
experiments/: Dockerfile  alignments.txt  conf2freq.py  generate.sh  max_F1.txt
experiments/avg_1/: conf_avg_1.sh  max_F1.txt  max_F1_conf.txt  wmt17.en-de.attn  wmt17.en-de.grad
experiments/avg_2/: conf_avg_2.sh  max_F1.txt  max_F1_conf.txt  wmt17.en-de.grad
experiments/avg_inf/: conf_avg_inf.sh  max_F1.txt  max_F1_conf.txt  news-test2008.json  wmt17.en-de.attn  wmt17.en-de.grad
experiments/max_1/: conf_max_1.sh  max_F1.txt  max_F1_conf.txt  news-test2008.hyp  wmt17.en-de.attn  wmt17.en-de.grad
experiments/max_2/: conf_max_2.sh  max_F1.txt  max_F1_conf.txt  wmt17.en-de.giza  wmt17.en-de.grad
experiments/max_inf/: conf_max_inf.sh  max_F1.txt  max_F1_conf.txt  news-test2008.freq.json  news-test2008.json  wmt17.en-de.attn  wmt17.en-de.freq  wmt17.en-de.giza  wmt17.en-de.grad  wmt17.en-de.hyp3
experiments/sum_1/: conf_sum_1.sh  max_F1.txt  max_F1_conf.txt  max_F1_giza.txt  wmt17.en-de.attn  wmt17.en-de.giza  wmt17.en-de.grad  wmt17.en-de.hyp3
experiments/sum_2/: conf_sum_2.sh  max_F1.txt  max_F1_conf.txt  news-test2008.json  wmt17.en-de.grad
experiments/sum_inf/: conf_sum_inf.sh  max_F1.txt  max_F1_conf.txt  wmt17.en-de.grad
output/: generate.sh  max_F1.txt
output/avg_1/: news-test2008.json
output/avg_2/: news-test2008.json
output/max_1/: news-test2008.json
output/max_2/: news-test2008.json
output/sum_inf/: news-test2008.json
translation/: config.toml  decoder.py  dictionary.py  knn.py  layers.py  main.py  manager.py  model.py  preprocess.py  score.py  translate.py
