[tool.poetry]
name = "translation"
version = "0.1.0"
description = "Using Source-Side Confidence Estimation for Reliable Translation into Unfamiliar Languages"
authors = ["Ken Sible <ksible@nd.edu>"]

[[tool.poetry.source]]
name = "pypi"
priority = "primary"

[[tool.poetry.source]]
name = "cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "supplemental"

[tool.poetry.dependencies]
python = "^3.10"
sacrebleu = "^2.5.1"
sacremoses = "^0.1.1"
subword-nmt = "^0.3.8"
sentencepiece = "^0.2.0"
unbabel-comet = "^2.2.4"
tqdm = "^4.67.1"
nltk = "^3.9.1"

[tool.poetry.group.dev.dependencies]
ipython = "^8.32.0"
ipykernel = "^6.29.5"
black = "^25.1.0"
ruff = "^0.9.5"
mypy = "^1.15.0"
openai = "^1.61.1"
scipy = "^1.15.1"
matplotlib = "^3.10.0"

[tool.poetry.group.cu121.dependencies]
torch = { version = "2.2.0", source = "cu121" }

[tool.poetry.group.spacy.dependencies]
spacy = "3.7.5"
numpy = "^1.19.0"
en_core_web_sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl"}
de_core_news_sm = {url = "https://github.com/explosion/spacy-models/releases/download/de_core_news_sm-3.7.0/de_core_news_sm-3.7.0-py3-none-any.whl"}

[tool.black]
skip-string-normalization = true
line-length = 100

[tool.ruff]
extend-select = ["I"]
line-length = 100

[tool.mypy]
ignore_missing_imports = true
